# ai-play

./: .gitignore  README.md
claude/: CLAUDE.md
feast-play/: README.md
krst/: DL-queries.md  SPARQL-queries.md  corportate.ofn  corportate.properties  removed-axioms.md
langgraph-play/: README.md  pyproject.toml
langgraph-play/artifacts/: graph.mmd
langgraph-play/script/: run_graph.py
langgraph-play/src/langgraph_play/: __init__.py  lg_sm.py  state.py
langgraph-play/src/langgraph_play/config/: config.yaml
langgraph-play/tests/: test_sm.py  test_state.py
llama-play/: README.md  agent_tools.py  one_app.py  scoring_app.py
llama-stack-03-app/: README.md  main.py  pyproject.toml
llama-stack-03-server/: README.md  main.py  pyproject.toml
llama-stack-app/: README.md  pyproject.toml
llama-stack-app/interactive/: pyproject.toml
llama-stack-app/interactive/src/interactive/: __init__.py  auto_tracing.py  client.py  new_tracing.py
llama-stack-app/script/: main.py
llama-stack-server/: README.md  main.py  pyproject.toml
machine-learning-project/: dqn-app.py  dqn.py  dqnapp.py  qapp.py  qdebug.py  qdictionary.py  qlearn-app.py  qlearn-view.py  qlearn.py  qnetwork.py
neural-networks-play/: main.py  pyproject.toml
neural-networks-play/jax-play/: pyproject.toml
neural-networks-play/jax-play/src/jax_play/: __init__.py
neural-networks-play/numpy-play/: pyproject.toml
neural-networks-play/numpy-play/src/numpy_play/: __init__.py  funct_num.py
neural-networks-play/numpy-play/tests/: funct_num_test.py
neural-networks-play/torch-play/: pyproject.toml
neural-networks-play/torch-play/src/torch_play/: __init__.py
numpy-play/: bla.py  full.py  gen_app.py  gen_data.py  generate-data.py  (+1 more)
vllm-play/: README.md  pyproject.toml
vllm-play/script/: main.py
vllm-play/src/vllm_play/: __init__.py
(+92 files in other folders)
