[project]
name = "llama-stack-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-stack-client==0.2.21",
    "opentelemetry-exporter-otlp-proto-http==1.37.0",
    "opentelemetry-instrumentation-httpx>=0.58b0",
]

[tool.uv.workspace]
members = [
    "interactive",
]
