[project]
name = "neural-networks-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax>=0.7.2",
    "numpy>=2.3.3",
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.uv.workspace]
members = [
    "jax-play",
    "numpy-play",
    "torch-play",
]
