[project]
name = "vllm-play"
version = "0.1.0"
description = "Minimal uv client for a local vLLM server"
readme = "README.md"
authors = [
    { name = "Fabio Massimo Ercoli", email = "fabiomassimo.ercoli@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai>=2.38.0",
]

[project.scripts]
vllm-play = "vllm_play:main"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"
